# CS130-Game

./: .gitignore  GENERAL.todo  README  README.md
assets/: Background.tga  Floor.tga  Icon.tga  PauseGradient.tga
assets/config/: test.conf  test.ini
assets/shaders/: testFrag.glsl  testVert.glsl
assets/textures/: TestBackground.tga  TestFloor.tga  bird.tga  box.tga  brick_h.tga  brick_v.tga  circle.tga  green.tga  planet.tga  platform_ground.tga
assets/textures/bird/: bird2.tga  bird3.tga  bird4.tga  bird5.tga  bird6.tga  bird7.tga  bird8.tga
build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  tetrad-game.sln  tetrad-game.vcxproj  tetrad-game.vcxproj.filters
build2/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
build2/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
build2/tetrad-game.dir/Debug/tetrad-game.tlog/: CL.read.1.tlog  cl.command.1.tlog  cl.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: CMakeLists.txt  Config.h.in  Doxyfile.in  main.cpp
src/base/: Base.cpp  Base.h  ConstVector.h  Platform.cpp  Platform.h  Types.h
src/content/: TestComp.h
src/core/: Base.h  ConstVector.h  ErrorSystem.cpp  ErrorSystem.h  EventQueue.h  LogSystem.cpp  LogSystem.h  Package.h  PackageFormat.h  Platform.h  Rand.h  Resource.h  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Types.h
src/core/_private/: Base.cpp  EventQueue.cpp  LogSystem.cpp  Package.cpp  PackageFormat.cpp  Platform.cpp  Rand.cpp  ShaderProgram.cpp  Types.cpp
src/engine/: Buffer.h  ComponentManager.h  EntityManager.h  IAction.h  IComponent.h  ISystem.h  ResourceManager.h  Sound.h  Timer.h
src/engine/_inc/: ObjList.h
src/engine/_private/: Buffer.cpp  ComponentManager.cpp  EntityManager.cpp  ISystem.cpp  ResourceManager.cpp  Sound.cpp  Timer.cpp
src/game/: Action_Jump.h  Action_PauseGame.cpp  Base.cpp  Base.h  CameraComponent.cpp  CameraComponent.h  Component.h  ComponentManager.h  Constants.h  DrawComponent.cpp  DrawComponent.h  DrawSystem.cpp  DrawSystem.h  Entity.h  EntityManager.cpp  EntityManager.h  EventSystem.cpp  EventSystem.h  Game.cpp  Game.h  IAction.h  IComponentManager.h  ISystem.h  InputConstants.h  InputMapper.h  InputSystem.cpp  InputSystem.h  MovableComponent.cpp  MovableComponent.h  ObserverComponent.cpp  ObserverComponent.h  Paths.h  PhysicsComponent.cpp  PhysicsComponent.h  PhysicsSystem.cpp  PhysicsSystem.h  TestComp.h  TetradGame.h  TransformComponent.cpp  TransformComponent.h
src/game/_private/: Game.cpp  InputMapper.cpp  TetradGame.cpp
src/game/action/: Action_Jump.h  Action_Left_Right.h  Action_PauseGame.h  Action_ToggleHitboxView.h
src/game/action/_private/: Action_Jump.cpp  Action_Left_Right.cpp  Action_PauseGame.cpp  Action_ToggleHitboxView.cpp
src/game/component/: CameraComponent.h  CollisionComponent.h  DrawComponent.h  MaterialComponent.h  MovableComponent.h  ObserverComponent.h  PhysicsComponent.h  SoundComponent.h  TransformComponent.h
src/game/component/_private/: CameraComponent.cpp  CollisionComponent .cpp  DrawComponent.cpp  MaterialComponent.cpp  MovableComponent.cpp  ObserverComponent.cpp  PhysicsComponent.cpp  SoundComponent.cpp  TransformComponent.cpp
src/game/system/: CollisionSystem.h  DrawSystem.h  EventSystem.h  PhysicsSystem.h  SoundSystem.h
src/game/system/_private/: CollisionSystem.cpp  DrawSystem.cpp  EventSystem.cpp  PhysicsSystem.cpp  SoundSystem.cpp
src/system/: ComponentManager.cpp  ComponentManager.h  Entity.h  EntityManager.cpp  EntityManager.h  EventQueue.cpp  EventQueue.h  IComponent.h  IComponentManager.h  ISystem.cpp  ISystem.h  ObjList.h  Timer.cpp  Timer.h
src/tools/: packageBuilder.cpp  packageReader.cpp
